# Symengine-benchmarks

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp
src/benchmarks/: CMakeLists.txt  benchmark_base.h  plot_mem_usage.py
src/benchmarks/bench01/: CMakeLists.txt  bench01.cpp  bench01.h  bench_main.cpp  plot.sh  readme.md
src/benchmarks/bench05/: CClonedExprReconstruction.h  CFileWriter.h  CFileWriterBase.h  CMakeLists.txt  bench05.cpp  bench05.h  bench_main.cpp  plot.sh  readme.md
src/utils/: CMakeLists.txt  mem_usage_tracker.h  timers.cpp  timers.h  visitor_sym.h
